# OBD-Engine-Sound-Simulator

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  oboe_engine.cpp  oboe_engine.h
android/app/src/main/cpp/audio/: audio_sample.h  procedural_samples.cpp  procedural_samples.h  sample_player.h
android/app/src/main/cpp/dsp/: biquad_filter.h  comb_filter.h  ring_buffer.h
android/app/src/main/cpp/synth/: engine_synth.cpp  engine_synth.h  engine_synth_pro.cpp  engine_synth_pro.h
android/app/src/main/kotlin/com/enginex/audio/: OboeAudioEngine.kt
android/app/src/main/kotlin/com/example/enginegamma/: MainActivity.kt
android/app/src/main/kotlin/com/example/enginegamma/audio/: AudioFocusManager.kt
android/app/src/main/kotlin/com/example/enginegamma/background/: EngineAudioService.kt
android/app/src/main/kotlin/com/example/enginegamma/engine/: EngineChannelHandler.kt  EnginePhysics.kt  VehicleProfiles.kt
android/app/src/main/kotlin/com/example/enginegamma/obd/: OBDParser.kt  OBDService.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/constants/: app_constants.dart  channel_constants.dart
lib/core/theme/: app_theme.dart
lib/features/engine/data/models/: engine_state.dart  obd_state.dart  vehicle_profile.dart
lib/features/engine/domain/: engine_notifier.dart  engine_providers.dart
lib/features/engine/presentation/screens/: engine_screen.dart  obd_connect_screen.dart  vehicle_selector_screen.dart
lib/features/engine/presentation/widgets/: engine_status_panel.dart  gear_selector.dart  obd_status_badge.dart  rpm_gauge.dart  throttle_slider.dart
lib/services/: platform_channel_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
